# google-ai-scraper

./: .gitignore  CLAUDE.md  PUBLISHING.md  README.md  chrome-store-listing.md  com.google-ai-scraper.plist  firefox-store-listing.md  firefox-store-metadata.json
.github/workflows/: publish-extension.yml  publish-firefox-extension.yml  publish.yml
chrome-store-assets/: generate.py
docs/: privacy-policy.md
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
firefox-extension/: background.js  content.js  manifest.json  options.js  popup.css  popup.js
firefox-store-assets/: generate.py
scripts/: generate_extension_icons.py
server/: README.md  main.py  pyproject.toml  start-services.sh
server/google_ai_scraper/: __init__.py  app.py
server/google_ai_scraper/mcp_server/: server.py
server/mcp_server/: server.py
