[project]
name = "google-ai-scraper"
version = "0.1.0"
description = "Scrape Google AI Overviews via Chrome extension relay"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
google-ai-mcp = "mcp_server.server:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [".", "mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
