[project]
name = "google-ai-scraper"
version = "0.2.2"
description = "MCP server for scraping Google AI Overviews via a Chrome extension relay"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "Bala Kumar", email = "mail@balakumar.dev" }]
keywords = ["mcp", "google", "ai-overview", "scraper", "chrome-extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
google-ai-scraper = "google_ai_scraper.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/balakumardev/google-ai-scraper"
Repository = "https://github.com/balakumardev/google-ai-scraper"
Issues = "https://github.com/balakumardev/google-ai-scraper/issues"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["google_ai_scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
